k8s/ai-service-k8s.yaml
# --- DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service-deployment
  labels:
    app: ai-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
      - name: ai-service-container
        image: asia-southeast1-docker.pkg.dev/smar-481605/smartbus-repo/ai-service:v1
        ports:
        - containerPort: 3006 
---
# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  selector:
    app: ai-service
  ports:
  - protocol: TCP
    port: 3006
    targetPort: 3006
  type: ClusterIP
