k8s/api-gateway-k8s.yaml
# --- DEPLOYMENT API GATEWAY ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/api-gateway-service:v4.0.1
        ports:
        - containerPort: 3000
        
        # SỬ DỤNG env: ĐỂ GHI ĐÈ VÀ LẤY SECRET
---
# --- SERVICE LOAD BALANCER ---
apiVersion: v1
kind: Service
metadata:
  name: smartbus-loadbalancer 
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 3000
    name: http-traffic 
  type: NodePort
