k8s/auth-service-k8s.yaml
# --- DEPLOYMENT AUTH SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  labels:
    app: auth-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service-container
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/auth-service:v8.2
        ports:
        - containerPort: 3002 
        
        # BỎ HOÀN TOÀN envFrom
---

# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
  type: ClusterIP
