k8s/booking-service-k8s.yaml
# --- DEPLOYMENT BOOKING SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  labels:
    app: booking-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service-container
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/booking-service:v4.0.1
        ports:
        - containerPort: 3005 
        
        # BỎ HOÀN TOÀN envFrom
---

# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
  type: ClusterIP
