k8s/notification-service-k8s.yaml
# --- DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service-container
        # Thay thế [PROJECT_ID] nếu cần
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/notification-service:v8
        ports:
        - containerPort: 3003
        
        # SỬ DỤNG TRƯỜNG 'env:' (environment) ĐỂ KHAI BÁO TẤT CẢ BIẾN
---

# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
  type: ClusterIP
