k8s/promotion-service-k8s.yaml
# --- DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-service-deployment
  labels:
    app: promotion-service
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: promotion-service
  template:
    metadata:
      labels:
        app: promotion-service
    spec:
      containers:
      - name: promotion-service-container
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/promotion-service:v2.0.3
        ports:
        - containerPort: 3002 
---
# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: promotion-service
spec:
  selector:
    app: promotion-service
  ports:
  - protocol: TCP
    port: 3004
    targetPort: 3004
  type: ClusterIP
