k8s/rabbitmq-deployment.yaml
# --- DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 5672 # AMQP
        - containerPort: 15672 # Management UI (Internal)
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service 
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  type: ClusterIP
