k8s/trip-schedule-service-k8s.yaml
# --- DEPLOYMENT TRIP SCHEDULE SERVICE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-schedule-service-deployment
  labels:
    app: trip-schedule-service
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: trip-schedule-service
  template:
    metadata:
      labels:
        app: trip-schedule-service
    spec:
      containers:
      - name: trip-schedule-service-container
        image: asia-southeast1-docker.pkg.dev/smartbusproject-480408/smartbus-repo/trip-schedule-service:v2.0.3
        ports:
        - containerPort: 3001 
        
        # BỎ HOÀN TOÀN envFrom
---

# --- SERVICE --- (ClusterIP: Chỉ nội bộ)
apiVersion: v1
kind: Service
metadata:
  name: trip-schedule-service
spec:
  selector:
    app: trip-schedule-service
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
