k8s/gke-ingress.yaml
# gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbus-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" 
    kubernetes.io/ingress.global-static-ip-name: "tiennguyendev34402"
    networking.gke.io/managed-certificates: "api-gateway-cert" 
    ingress.gke.io/timeout-seconds: "120"
    ingress.gcp.kubernetes.io/pre-shared-certs: "api-gateway-cert"
    
spec:
  # tls:
  # - hosts:
  #   - api.smartbus.io.vn
  #   - nhaxe.smartbus.io.vn
    # secretName: mcrt-41d17dbf-b601-453a-aa33-59347394e506
  
  rules:
  # RULE DÀNH CHO API GATEWAY
  - host: api.smartbus.io.vn 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartbus-loadbalancer 
            port:
              number: 80
    # RULE 2: FRONTEND WEB
  - host: nhaxe.smartbus.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
